--- a/Project 01/style.css
+++ b/Project 01/style.css
@@ -134,4 +134,4 @@ div.gallery {
 }
 @font-face {
     font-family: Dosis;
-    src: url(Fonts/Dosis/Dosis-Light.ttf);
+    src: url(Fonts/Dosis/Dosis-Light.ttf);}
