update to correct file structure

--- a/Project 02/CSS/style.css
+++ b/Project 02/CSS/style.css
@@ -62,4 +62,4 @@ nav ul li {
 
 @font-face {
     font-family: Dosis;
-    src: url(Dosis/Dosis-Regular.ttf);}
+    src: url(/Fonts/Dosis/Dosis-Regular.ttf);}
